--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -58,7 +58,6 @@ body {
   color: var(--clr-font);
   font-size: 16px;
   height: 100vh;
-  min-height: 1000px;
   width: 100vw;
   margin: 0 auto;
   overflow-x: hidden;
